Update: Buttons stylized

--- a/Code/home.html
+++ b/Code/home.html
@@ -6,46 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vaccination</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/atoms.css">
 </head>
 <body>
-    <div class="">
-        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mx-3">
-            <a href="/" class="d-flex align-items-center col-auto mb-2 mb-md-0 text-dark text-decoration-none">
-                <img src="https://img.icons8.com/external-justicon-flat-justicon/64/000000/external-vaccine-science-justicon-flat-justicon-1.png" width="40" height="32"/>
-                <h1 class="logo__name">Vaccination</h1>
-            </a>
-            <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 flex-wrap">
-                <li class="nav-item">
-                    <a href="#" class="nav-link px-2 link-dark">
-                        Database
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link px-2 link-dark">
-                        Education
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link px-2 link-dark">
-                        News
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link px-2 link-dark">
-                        Regulation
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <button type="button" class="btn btn-primary mx-2 ">
-                        Hoax Buster
-                    </button>
-                </li>
-            </ul>
-        </header>
-    </div>
-    <main>
-        a
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mx-3">
+        <a href="/" class="d-flex align-items-center col-auto mb-2 mb-md-0 text-dark text-decoration-none">
+            <img src="https://img.icons8.com/external-justicon-flat-justicon/64/000000/external-vaccine-science-justicon-flat-justicon-1.png" width="40" height="32"/>
+            <h1 class="logo__name">Vaccination</h1>
+        </a>
+        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 flex-wrap">
+            <li class="nav-item">
+                <a href="#" class="nav-link px-2 link-dark">
+                    Database
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link px-2 link-dark">
+                    Education
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link px-2 link-dark">
+                    News
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link px-2 link-dark">
+                    Regulation
+                </a>
+            </li>
+            <li class="nav-item">
+                <button type="button" class="btn-hoax btn btn-primary mx-2 ">
+                    Hoax Buster
+                </button>
+            </li>
+        </ul>
+    </header>
+    <main id="">
+        <section class="row">
+            <div class="col main__info">
+                <h1>
+                    Fight Virus With Vaccines
+                </h1>
+            </div>
+            <div class="col main__image">
+                <img src="" alt="" class="main__image--img">
+            </div>
+        </section>
     </main>
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
