--- a/Code/home.html
+++ b/Code/home.html
@@ -4,53 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vaccination</title>
+    <title>Vacunación</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style/general.css">
+    <link rel="stylesheet" href="./style/landing.css">
+    <link rel="stylesheet" href="./style/molecules.css">
     <link rel="stylesheet" href="./style/atoms.css">
 </head>
 <body>
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mx-3">
-        <a href="/" class="d-flex align-items-center col-auto mb-2 mb-md-0 text-dark text-decoration-none">
+    <header class="justify-content-center justify-content-md-between p-3">
+        <a href="#" class="d-flex align-items-center col-auto mb-2 mb-md-0 text-dark text-decoration-none">
             <img src="https://img.icons8.com/external-justicon-flat-justicon/64/000000/external-vaccine-science-justicon-flat-justicon-1.png" width="40" height="32"/>
-            <h1 class="logo__name">Vaccination</h1>
+            <h1 class="logo__title">Vacunación</h1>
         </a>
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 flex-wrap">
             <li class="nav-item">
                 <a href="#" class="nav-link px-2 link-dark">
-                    Database
+                    Base de datos
                 </a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link px-2 link-dark">
-                    Education
+                    Educacion
                 </a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link px-2 link-dark">
-                    News
+                    Noticias
                 </a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link px-2 link-dark">
-                    Regulation
+                    Regulaciones
                 </a>
             </li>
             <li class="nav-item">
                 <button type="button" class="btn-hoax btn btn-primary mx-2 ">
-                    Hoax Buster
+                    Desmitificador
                 </button>
             </li>
         </ul>
     </header>
     <main id="">
-        <section class="row">
-            <div class="col main__info">
-                <h1>
-                    Fight Virus With Vaccines
-                </h1>
-            </div>
-            <div class="col main__image">
-                <img src="" alt="" class="main__image--img">
+        <section class="main_view">
+            <div class="row view--main">
+                <div class="col-12 col-md-6 main__info">
+                    <h1>
+                        Pelea contra el virus con la vacuna
+                    </h1>
+                    <p>
+    
+                    </p>
+                </div>
+                <div class="col-12 col-md-6 main__image">
+                    <img class="main__image--img" src="./images/nurse-1.jpg" alt="" >
+                </div>
             </div>
         </section>
     </main>
