--- a/Code/home.html
+++ b/Code/home.html
@@ -7,6 +7,7 @@
     <title>Vacunación</title>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     
     <link rel="stylesheet" href="./style/general.css">
     <link rel="stylesheet" href="./style/landing.css">
@@ -15,7 +16,7 @@
 </head>
 <body>
     <header class="justify-content-center justify-content-md-between ">
-        <a href="#" class="d-flex align-items-center col-auto mb-2 mb-md-0 text-dark text-decoration-none">
+        <a href="#" class="d-flex align-items-center col-auto mb-2 mb-md-0 me-1 text-dark text-decoration-none">
             <!-- <img src="https://img.icons8.com/external-justicon-flat-justicon/64/000000/external-vaccine-science-justicon-flat-justicon-1.png" width="40" height="32"/> -->
             <h1 class="logo__title">Vacunación</h1>
         </a>
@@ -56,6 +57,20 @@
                 <p>
                     ¡Detengamos esta pandemia eliminando al virus con la vacuna! No dejes que tu familia y tú se contagien
                 </p>
+                <div class="d-flex align-items-center justify-content-evenly p-4 tag__text--1">
+                    <div class="d-flex justify-content-center align-items-center me-3">
+                        <div class="icon_box icon_box--special d-flex justify-content-center align-items-center ">
+                            <i class="bi bi-shield-fill-check "></i>
+                        </div>
+                        La mejor protección
+                    </div>
+                    <div class="d-flex justify-content-center align-items-center ms-3">
+                        <div class="icon_box icon_box--special d-flex justify-content-center align-items-center ">
+                            <i class="bi bi-star-fill"></i>
+                        </div>
+                        Vacunas selectas
+                    </div>
+                </div>
             </div>
             <div class="main__image--container col-12 col-md-6">
                 <!-- <img class="main__image" src="./images/nurse-2.jpg" alt="2 - Imagen de enfermero con vacuna" > -->
