Update: Fixed responsive header and main image problems

--- a/Code/home.html
+++ b/Code/home.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header class="justify-content-center justify-content-md-between ">
-        <a href="#" class="d-flex align-items-center col-auto mb-2 mb-md-0 me-1 text-dark text-decoration-none">
+        <a href="#" class="d-flex align-items-center col-auto mb-2 mb-md-0 me-1 text-dark text-decoration-none mx-2">
             <!-- <img src="https://img.icons8.com/external-justicon-flat-justicon/64/000000/external-vaccine-science-justicon-flat-justicon-1.png" width="40" height="32"/> -->
             <h1 class="logo__title">Vacunación</h1>
         </a>
@@ -55,16 +55,16 @@
                     Derrotemos al Virus con la Vacuna
                 </h1>
                 <p>
-                    ¡Detengamos esta pandemia eliminando al virus con la vacuna! No dejes que tu familia y tú se contagien
+                    ¡Detengamos esta pandemia eliminando al virus con la vacuna! No dejes que tu familia o tú se contagien
                 </p>
                 <div class="d-flex align-items-center justify-content-evenly p-4 tag__text--1">
-                    <div class="d-flex justify-content-center align-items-center me-3">
+                    <div class="d-flex justify-content-center align-items-center me-2">
                         <div class="icon_box icon_box--special d-flex justify-content-center align-items-center ">
                             <i class="bi bi-shield-fill-check "></i>
                         </div>
                         La mejor protección
                     </div>
-                    <div class="d-flex justify-content-center align-items-center ms-3">
+                    <div class="d-flex justify-content-center align-items-center ms-2">
                         <div class="icon_box icon_box--special d-flex justify-content-center align-items-center ">
                             <i class="bi bi-star-fill"></i>
                         </div>
