Update: Icon box v0.1

--- a/Code/home.html
+++ b/Code/home.html
@@ -57,19 +57,27 @@
                 <p>
                     ¡Detengamos esta pandemia eliminando al virus con la vacuna! No dejes que tu familia o tú se contagien
                 </p>
-                <div class="d-flex align-items-center justify-content-evenly p-4 tag__text--1">
+                <div class="tag__text--1 d-flex align-items-center justify-content-evenly p-4 mb-4">
                     <div class="d-flex justify-content-center align-items-center me-2">
-                        <div class="icon_box icon_box--special d-flex justify-content-center align-items-center ">
+                        <div class="icon_box special">
                             <i class="bi bi-shield-fill-check "></i>
                         </div>
                         La mejor protección
                     </div>
                     <div class="d-flex justify-content-center align-items-center ms-2">
-                        <div class="icon_box icon_box--special d-flex justify-content-center align-items-center ">
+                        <div class="icon_box special">
                             <i class="bi bi-star-fill"></i>
                         </div>
                         Vacunas selectas
                     </div>
+                </div>
+                <div class="">
+                    <h5 class="d-flex justify-content-start align-items-center">
+                        <div class="icon_box">
+                            <i class="bi bi-clock-fill"></i>
+                        </div>
+                        Programa tus vacunas
+                    </h5>
                 </div>
             </div>
             <div class="main__image--container col-12 col-md-6">
