Fix: Responsive problems with vacunation form

--- a/Code/home.html
+++ b/Code/home.html
@@ -48,6 +48,7 @@
             </li>
         </ul>
     </header>
+
     <section class="main container-fluid" id="main_view">
         <div class="row g-0">
             <section class="main__container col-12 col-md-6">
@@ -82,7 +83,7 @@
                         Agenda tu vacunación:   
                     </h5>
                     <form action="" class="vaccination__form container-fluid">
-                        <div class="">
+                        <div>
                             <div class="vaccination__input-group">
                                 <h5 class="d-flex justify-content-start align-items-center">
                                     <div class="icon_box">
@@ -131,12 +132,14 @@
             </section>
         </div>
     </section>
+
     <section class="vaccines_logos container-fluid" id="vaccines_logos">
         <img class="img-fluid" src="./images/logo_astrazeneca.png" alt="Logo AstraZeneca">
         <img class="img-fluid" src="./images/logo_sinovac.png" alt="Logo Sinovac">
         <img class="img-fluid" src="./images/logo_pfizer.png" alt="Logo Pfizer">
         <img class="img-fluid" src="./images/logo_moderna.png" alt="Logo Moderna">
     </section>
+
     <section class="container"  id="vaccination_beneficts">
         <div class="row g-0 mb-4">
             <div class="col-12 col-lg-6 text-center text-lg-start">
