--- a/Code/home.html
+++ b/Code/home.html
@@ -133,14 +133,14 @@
         </div>
     </section>
 
-    <section class="vaccines_logos container-fluid" id="vaccines_logos">
+    <section class="vaccines_logos  main-gap container-fluid" id="vaccines_logos">
         <img class="img-fluid" src="./images/logo_astrazeneca.png" alt="Logo AstraZeneca">
         <img class="img-fluid" src="./images/logo_sinovac.png" alt="Logo Sinovac">
         <img class="img-fluid" src="./images/logo_pfizer.png" alt="Logo Pfizer">
         <img class="img-fluid" src="./images/logo_moderna.png" alt="Logo Moderna">
     </section>
 
-    <section class="container"  id="vaccination_beneficts">
+    <section class="container main-gap"  id="vaccination_beneficts">
         <div class="row g-0 mb-4">
             <div class="col-12 col-lg-6 text-center text-lg-start">
                 <h2>
@@ -205,6 +205,55 @@
                 </div>
             </section>
         </section>
+    </section>
+    
+    <section class="container-fluid main-gap m-0 p-0" id="vaccination_preparations">
+        <div class="row g-0">
+            <section class="col-12 col-md-6 preparations__image--container">
+                <!-- <img class="img-fluid" src="./images/face-mask-1.jpg" alt=""> -->
+            </section>
+            <section class="preparations__container col-12 col-md-6">
+                <div class="text-center text-md-start">
+                    <h2>
+                        ¿Como me preparo para vacunarme?
+                    </h2>
+                    <p class="important">
+                        Es muy común sentir cierta incertidumbre hacia la vacunación y que debería hacer antes de ella. Es por ello que a continuación mencionamos algunas de las recomendaciones dadas por la Universidad de Nebraska-Linkon:
+                    </p>
+                </div>
+                <section class="vaccine_info__preparations accordion accordion-flush" id="preparations_list">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="panel-1">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panel-1-open" aria-expanded="true" aria-controls="panel-1-open">
+                            <div class="icon_box"><i class="bi bi-calendar-event-fill"></i>
+                            </div>
+                            Aceptar la primer cita disponible
+                        </button>
+                        </h2>
+                        <div id="panel-1-open" class="accordion-collapse collapse" data-bs-parent="#preparations_list" aria-labelledby="panel-1">
+                        <div class="accordion-body">
+                            Las citas pueden ser limitadas por lo que le conviene programar la cita lo antes posible que funcione para usted. Sin embargo, recuerde que podría tener algunos efectos secundarios leves en las siguientes 24 horas. Trate de no programar su cita antes de un examen importante o un compromiso importante.
+                        </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="panel-2">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panel-2-open" aria-expanded="true" aria-controls="panel-2-open">
+                            <div class="icon_box">
+                                <i class="bi bi-geo-alt-fill"></i>
+                            </div>
+                            Tener a la mano analgesicos
+                        </button>
+                        </h2>
+                        <div id="panel-2-open" class="accordion-collapse collapse" data-bs-parent="#preparations_list" aria-labelledby="panel-2">
+                        <div class="accordion-body">
+                            <b>Las citas pueden ser limitadas</b> por lo que le conviene programar la cita lo antes posible que funcione para usted. Sin embargo, recuerde que podría tener algunos efectos secundarios leves en las siguientes 24 horas. Trate de no programar su cita antes de un examen importante o un compromiso importante.
+                        </div>
+                        </div>
+                    </div>
+                </section>
+            </section>
+        </div>
     </section>
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
