--- a/Code/home.html
+++ b/Code/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/d5c83e3c70.js" crossorigin="anonymous"></script>
     <title>Vacunación</title>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -108,7 +109,7 @@
                             <div class="vaccination__input-group">
                                 <h5 class="d-flex justify-content-start align-items-center">
                                     <div class="icon_box">
-                                        <i class="bi bi-droplet-fill"></i>
+                                        <i class="fa-solid fa-syringe"></i>
                                     </div>
                                     Tipo de vacuna   
                                 </h5>
@@ -156,7 +157,7 @@
                 <div>
                     <h5 class="d-grid g-2">
                         <div class="icon_box big mb-3">
-                            <i class="bi bi-arrows-angle-contract"></i>
+                            <i class="fa-solid fa-virus-covid-slash"></i>
                         </div>
                         Disminuir la propagación   
                     </h5>
@@ -182,7 +183,7 @@
                 <div>
                     <h5 class="d-grid g-2">
                         <div class="icon_box big mb-3">
-                            <i class="bi bi-people-fill"></i>
+                            <i class="fa-solid fa-user-shield"></i>
                         </div>
                         Proteger a los demás   
                     </h5>
@@ -195,7 +196,7 @@
                 <div>
                     <h5 class="d-grid g-2">
                         <div class="icon_box big mb-3">
-                            <i class="bi bi-globe2"></i>
+                            <i class="fa-solid fa-users"></i>
                         </div>
                         Crear inmunidad de grupo 
                     </h5>
@@ -218,14 +219,15 @@
                         ¿Como me preparo para vacunarme?
                     </h2>
                     <p class="important">
-                        Es muy común sentir cierta incertidumbre hacia la vacunación y que debería hacer antes de ella. Es por ello que a continuación mencionamos algunas de las recomendaciones dadas por la Universidad de Nebraska-Linkon:
+                        Es muy común sentir cierta incertidumbre hacia la vacunación y que debería hacer antes de ella. Es por ello que a continuación mencionamos algunas de las recomendaciones dadas por la <a href="https://health.unl.edu/7-steps-prepare-your-covid-19-vaccines" class="link-dark" target="blank">Universidad de Nebraska-Linkon</a>:
                     </p>
                 </div>
                 <section class="vaccine_info__preparations accordion accordion-flush" id="preparations_list">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panel-1">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panel-1-open" aria-expanded="true" aria-controls="panel-1-open">
-                            <div class="icon_box"><i class="bi bi-calendar-event-fill"></i>
+                            <div class="icon_box">
+                                <i class="bi bi-calendar-event-fill"></i>
                             </div>
                             Aceptar la primer cita disponible
                         </button>
@@ -240,14 +242,59 @@
                         <h2 class="accordion-header" id="panel-2">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panel-2-open" aria-expanded="true" aria-controls="panel-2-open">
                             <div class="icon_box">
-                                <i class="bi bi-geo-alt-fill"></i>
+                                <i class="fa-solid fa-pills"></i>
                             </div>
                             Tener a la mano analgesicos
                         </button>
                         </h2>
                         <div id="panel-2-open" class="accordion-collapse collapse" data-bs-parent="#preparations_list" aria-labelledby="panel-2">
                         <div class="accordion-body">
-                            <b>Las citas pueden ser limitadas</b> por lo que le conviene programar la cita lo antes posible que funcione para usted. Sin embargo, recuerde que podría tener algunos efectos secundarios leves en las siguientes 24 horas. Trate de no programar su cita antes de un examen importante o un compromiso importante.
+                            El ibuprofeno y el paracetamol ayudan en caso de presentar efectos secundarios como fiebre, dolor o dolores de cabeza, sintomas normales que indican que su sistema inmunitario está respondiendo a la vacuna. No tome analgésicos antes de la vacunación para tratar de prevenir los efectos secundarios.
+                        </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="panel-3">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panel-3-open" aria-expanded="true" aria-controls="panel-3-open">
+                            <div class="icon_box">
+                                <i class="fa-solid fa-drumstick-bite"></i>
+                            </div>
+                            Comprar comida con anticipación
+                        </button>
+                        </h2>
+                        <div id="panel-3-open" class="accordion-collapse collapse" data-bs-parent="#preparations_list" aria-labelledby="panel-3">
+                        <div class="accordion-body">
+                            Compre comestibles antes de la fecha programada vacunarse. Recuerde las cosas que compraría si estuviera enfermo, como sopa de fideos con pollo, galletas saladas y bebidas deportivas o sueros hidratantes.
+                        </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="panel-4">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panel-4-open" aria-expanded="true" aria-controls="panel-4-open">
+                            <div class="icon_box">
+                                <i class="fa-solid fa-apple-whole"></i>
+                            </div>
+                            Comer adecuado antes de vacunarse
+                        </button>
+                        </h2>
+                        <div id="panel-4-open" class="accordion-collapse collapse" data-bs-parent="#preparations_list" aria-labelledby="panel-4">
+                        <div class="accordion-body">
+                            El día de su vacunación coma algo y beba agua. Es común para muchas personas sentir nervios al recibir cualquier tipo de inyección al punto de sentirse mareadas o aturdidas. Una nutrición e hidratación adecuadas combatirán eso. Se recomienda abstenerse de beber alcohol y hacer ejercicio intenso antes de la vacunación.
+                        </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="panel-5">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panel-5-open" aria-expanded="true" aria-controls="panel-5-open">
+                            <div class="icon_box">
+                                <i class="fa-solid fa-bed"></i>
+                            </div>
+                            Planear el descanso
+                        </button>
+                        </h2>
+                        <div id="panel-5-open" class="accordion-collapse collapse" data-bs-parent="#preparations_list" aria-labelledby="panel-5">
+                        <div class="accordion-body">
+                            Preferentemente programe su vacunación cuando tenga tiempo para descansar. Evite los entrenamientos extenuantes, la donación de sangre y otras actividades similares inmediatamente antes y después de la vacuna.
                         </div>
                         </div>
                     </div>
