Update: Main image fix, credits links

--- a/Code/home.html
+++ b/Code/home.html
@@ -466,10 +466,12 @@
                     <a href="#">Política de privacidad</a>
                 </div>
             </div>
-            <div class="container-fluid credits text-center">
-                <a href="https://www.freepik.es/mdjaff">1 Foto de enfermera por @mdjaff - www.freepik.es </a>  -  
-                <a href='https://www.freepik.es/mdjaff'>2 Foto de vacunacion @mdjaff - www.freepik.es</a>  -  
-                <a href="https://www.freepik.es/drobotdean">3 Foto de contacto por @drobotdean - www.freepik.es</a>
+            <div class="container-fluid credits text-center subhead">
+                <p>
+                    Atribución de las imagenes: De www.freepik.es 
+                    <a href="https://www.freepik.es/mdjaff" target="blank">foto de enfermera y foto de vacunacion por @mdjaff</a>  y
+                    <a href="https://www.freepik.es/drobotdean" target="blank">foto de contacto por @drobotdean</a>.
+                </p>
             </div>
         </div>
     </footer>
